# preset-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: read_ffpq3_preset.py  read_soundid_export.py  write_ffpq3_preset.py
preset_toolkit/: proq3_preset.py  soundid.py
tests/: test_proq3.py  test_soundid.py
tests/samples/: soundid.txt
